--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
   <input type="submit" value="Upload Image">
 </form>
     <ul id='picList'>
-        <li><img src='http://100.65.6.81:9001/public/uploads/bug.jpg'></li>
+        <li><img src='https://memebank.herokuapp.com/public/uploads/bug.jpg'></li>
     </ul>
 </body>
 </html>
