--- a/views/index.html
+++ b/views/index.html
@@ -27,47 +27,6 @@
        
     </ul>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script >
-        var pics='';
-console.log('wat');
-        
-        var submitURL;
-
-
-
-function refreshPics(){
-    console.log('ran it');
-    $.get('/loadPics',function(data){
-        
-        console.log(data);
-        for(var i in data){
-            console.log(data[i].url);
-            pics = pics+'<li><img src=\''+data[i].url+'\'</img></li>';
-            
-        }
-        
-        $('#picList').html(pics);
-        
-            
-    });  
-};
-    
-    submitURL = function(){
-        console.log('kk');
-        $.get('/url',{'url':$('#butt').val()},function(data){
-            
-            //console.log(data);
-        });
-    }
-    
-    
-    
-    
-
-
-
-
-refreshPics();
-    </script>
+    <script src='index.js'></script>
 </body>
 </html>
