--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
   <input type="file" name="image"> 
   <input type="submit" value="Upload Image">
 </form>
-    <form action="" method="POST" enctype="multipart/form-data">
+    <form enctype="multipart/form-data">
   URL:
  
     <input id='butt' type='text' name='imageURL' placeholder='Image URL'>
