added admin login

--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
 </head>
-
-<body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     
+<body>
+    <script>var pics='';
+console.log('wat');
+        
+        var submitURL;
+var login;
+
+
+
+function refreshPics(){
+    console.log('ran it');
+    $.get('/loadPics',function(data){
+        
+        console.log(data);
+        for(var i in data){
+            console.log(data[i].url);
+            pics = pics+'<li><img src=\''+data[i].url+'\'</img></li>';
+            
+        }
+        
+        $('#picList').html(pics);
+        
+            
+    });  
+};
+    
+    submitURL = function(){
+        console.log('kk');
+        $.get('/url',{'url':$('#butt').val()},function(data){
+            
+            //console.log(data);
+        });
+    }
+    
+    
+    login = function(){
+        $.get('/login',{'username':$('#username').val(),'password':$('#password').val()},function(data){
+            console.log(data);
+            
+            window.location.replace('/admin');
+        });
+    };
+    
+
+
+
+
+refreshPics();</script>
     
 
     
@@ -20,13 +67,18 @@
   URL:
  
     <input id='butt' type='text' name='imageURL' placeholder='Image URL'>
+
   
 
     <button id='clickit' onclick="submitURL()">submit url</button>
+    <br>
+        Admin Login:
+    <input id='username' type='username' name='user' placeholder='Admin username'>
+    <input id='password' type='password' name='pass' placeholder='Admin Password'>
+    <button id='loginButton' onclick='login()'>login</button>
     <ul id='picList'>
        
     </ul>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src='index.js'></script>
+    
 </body>
 </html>
