--- a/views/index.html
+++ b/views/index.html
@@ -44,9 +44,15 @@ function refreshPics(){
     
     login = function(){
         $.get('/login',{'username':$('#username').val(),'password':$('#password').val()},function(data){
-            console.log(data);
             
-            window.location.replace('/admin');
+            console.log(data);
+            if(data){
+                window.location.replace('/admin');
+            }
+            else{
+                window.location.replace('/');
+            }
+            
         });
     };
     
