fixed directory for index.js

--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,6 @@
     <ul id='picList'>
        
     </ul>
-     <script src='/views/index.js'></script>
+     <script src='index.js'></script>
 </body>
 </html>
