--- a/views/index.html
+++ b/views/index.html
@@ -3,26 +3,28 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
   <title></title>
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    
-<body>
-   
-    
 
-    
+<body>
+
+
+
+
   <form action="/upload" method="POST" enctype="multipart/form-data">
   Select an image to upload:
-  <input type="file" name="image"> 
+  <input type="file" name="image">
   <input type="submit" value="Upload Image">
 </form>
-    
+
   URL:
  <form action='/url' method='POST'>
     <input id='butt' type='text' name='imageURL' placeholder='Image URL'>
 
-  
+
 
     <input type='submit' value='submitURL'>
     </form>
@@ -33,9 +35,9 @@
     <input id='password' type='password' name='pass' placeholder='Admin Password'>
     <input type='submit' value='login'>
     </form>
-    <ul id='picList'>
-       
-    </ul>
+    <div class="container" id="picList">
+
+    </div>
      <script src='index.js'></script>
 </body>
 </html>
