more fronted work

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
   <form action="/upload" method="POST" enctype="multipart/form-data">
   Select an image to upload:
   <input type="file" name="image">
-  <input type="submit" value="Upload Image">
+  <input type="submit" value="Upload Image" class="btn btn-default">
 </form>
 
   URL:
@@ -26,16 +26,16 @@
 
 
 
-    <input type='submit' value='submitURL'>
+    <input type='submit' value='submitURL' class="btn btn-default">
     </form>
     <br>
         Admin Login:
     <form action='/login' method='POST'>
     <input id='username' type='username' name='user' placeholder='Admin username'>
     <input id='password' type='password' name='pass' placeholder='Admin Password'>
-    <input type='submit' value='login'>
+    <input type='submit' value='login' class="btn btn-default">
     </form>
-    <div class="container" id="picList">
+    <div class="container" id="picListv">
 
     </div>
      <script src='index.js'></script>
