where'd that v come from

--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
     <input id='password' type='password' name='pass' placeholder='Admin Password'>
     <input type='submit' value='login' class="btn btn-default">
     </form>
-    <div class="container" id="picListv">
+    <div class="container" id="picList">
 
     </div>
      <script src='index.js'></script>
