--- a/views/index.html
+++ b/views/index.html
@@ -13,14 +13,17 @@
 
 
 
-
+<div class="container">
+  <div class="row">
   <form action="/upload" method="POST" enctype="multipart/form-data">
-  Select an image to upload:
+  <h3>Select an image to upload:</h3>
   <input type="file" name="image">
   <input type="submit" value="Upload Image" class="btn btn-default">
 </form>
+</div>
 
-  URL:
+<div class="row">
+  <h3>URL:</h3>
  <form action='/url' method='POST'>
     <input id='butt' type='text' name='imageURL' placeholder='Image URL'>
 
@@ -28,13 +31,16 @@
 
     <input type='submit' value='submitURL' class="btn btn-default">
     </form>
-    <br>
-        Admin Login:
+  </div>
+  <div class="row">
+        <h3>Admin Login:</h3>
     <form action='/login' method='POST'>
     <input id='username' type='username' name='user' placeholder='Admin username'>
     <input id='password' type='password' name='pass' placeholder='Admin Password'>
     <input type='submit' value='login' class="btn btn-default">
     </form>
+  </div>
+  </div>
     <div class="container" id="picList">
 
     </div>
