new file selector

--- a/views/styles.css
+++ b/views/styles.css
@@ -1,4 +1,15 @@
 .img-grid{
   max-width: 300px;
   max-height: 300px;
+  padding-bottom: 20px;
+  margin: 0 auto;
+}
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
 }
