--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,8 @@
   <div class="row">
   <form action="/upload" method="POST" enctype="multipart/form-data">
   <h3>Select an image to upload:</h3>
-  <input type="file" name="image">
+  <input type="file" name="file" id="file" class="inputfile data-multiple-caption="{count} files selected" multiple ">
+  <label for="file">Choose a file</label>
   <input type="submit" value="Upload Image" class="btn btn-default">
 </form>
 </div>
