--- a/views/index.html
+++ b/views/index.html
@@ -15,14 +15,21 @@
 
 <div class="container">
   <div class="row">
-  <form action="/upload" method="POST" enctype="multipart/form-data">
-  <h3>Select an image to upload:</h3>
-  <input type="file" name="image">
-  <input type="submit" value="Upload Image" class="btn btn-default">
-</form>
-</div>
+    <div class="col-md-6">
+      <form action="/upload" method="POST" enctype="multipart/form-data">
+        <h3>Select an image to upload:</h3>
+        <input type="file" name="image">
+        <input type="submit" value="Upload Image" class="btn btn-default">
+      </form>
+    </div>
+    <div class="col-md-6">
+      <button class="btn btn-default pull-right" data-toggle="modal" data-target="#myModal">Login</button>
+      </div>
+    </div>
+
 
 <div class="row">
+  <div class="col-md-6">
   <h3>URL:</h3>
  <form action='/url' method='POST'>
     <input id='butt' type='text' name='imageURL' placeholder='Image URL'>
@@ -32,18 +39,38 @@
     <input type='submit' value='submitURL' class="btn btn-default">
     </form>
   </div>
+  </div>
   <div class="row">
-        <h3>Admin Login:</h3>
-    <form action='/login' method='POST'>
-    <input id='username' type='username' name='user' placeholder='Admin username'>
-    <input id='password' type='password' name='pass' placeholder='Admin Password'>
-    <input type='submit' value='login' class="btn btn-default">
-    </form>
+    <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Admin Login</h4>
+        </div>
+        <div class="modal-body text-center">
+          <form action='/login' method='POST'>
+          <input id='username' class="form-control" type='username' name='user' placeholder='Username'>
+          <input id='password' class="form-control" type='password' name='pass' placeholder='Password'>
+          <div class="modal-footer">
+            <input type='submit' value='Login' class="btn btn-default">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
   </div>
   </div>
     <div class="container" id="picList">
 
     </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
      <script src='index.js'></script>
 </body>
 </html>
