more frontend code

--- a/views/index.html
+++ b/views/index.html
@@ -15,30 +15,30 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4 col-xs-4 col-sm-4">
       <form action="/upload" method="POST" enctype="multipart/form-data">
-        <h3>Select an image to upload:</h3>
-        <input type="file" name="image">
+        <div class="input-group">
+               <label class="input-group-btn">
+                   <span class="btn btn-primary">
+                       Select File&hellip; <input type="file" style="display: none;" multiple>
+                   </span>
+               </label>
+               <input type="text" class="form-control" readonly>
+           </div>
         <input type="submit" value="Upload Image" class="btn btn-default">
       </form>
     </div>
-    <div class="col-md-6">
-      <button class="btn btn-default pull-right" data-toggle="modal" data-target="#myModal">Login</button>
-      </div>
+    <div class="col-md-4 col-xs-4 col-sm-4 text-center">
+      <form action='/url' method='POST'>
+        <label for="butt">URL</label>
+         <input id='butt' type='text' name='imageURL' placeholder='Image URL'>
+         <input type='submit' value='submitURL' class="btn btn-default">
+         </form>
     </div>
 
-
-<div class="row">
-  <div class="col-md-6">
-  <h3>URL:</h3>
- <form action='/url' method='POST'>
-    <input id='butt' type='text' name='imageURL' placeholder='Image URL'>
-
-
-
-    <input type='submit' value='submitURL' class="btn btn-default">
-    </form>
-  </div>
+    <div class="col-md-4 col-xs-4 col-sm-4">
+      <button class="btn btn-default pull-right" data-toggle="modal" data-target="#myModal">Login</button>
+      </div>
   </div>
   <div class="row">
     <!-- Modal -->
@@ -67,7 +67,7 @@
 
   </div>
   </div>
-    <div class="container" id="picList">
+    <div class="container grid-container" id="picList">
 
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
