--- a/views/index.html
+++ b/views/index.html
@@ -67,6 +67,9 @@
 
   </div>
   </div>
+  <div class="page-header text-center">
+    <h1>MemeBank</h1>
+  </div>
     <div class="container grid-container" id="picList">
 
     </div>
