file upload fix

--- a/views/index.html
+++ b/views/index.html
@@ -20,12 +20,12 @@
         <div class="input-group">
                <label class="input-group-btn">
                    <span class="btn btn-primary">
-                       Select File&hellip; <input type="file" name="image" style="display: none;" multiple>
+                       Select File&hellip; <input type="file" style="display: none;" multiple>
                    </span>
                </label>
                <input type="text" class="form-control" readonly>
-               <input type="submit" value="Upload Image" class="btn btn-default">
            </div>
+           <input type="submit" value="Upload Image" class="btn btn-default">
       </form>
     </div>
     <div class="col-md-4 col-xs-4 col-sm-4 text-center">
