--- a/views/index.html
+++ b/views/index.html
@@ -18,14 +18,16 @@
     <div class="col-md-4 col-xs-4 col-sm-4">
       <form action="/upload" method="POST" enctype="multipart/form-data">
         <div class="input-group">
-               <label class="input-group-btn">
+               <label class="input-group-btn" style="display:inline;">
                    <span class="btn btn-primary">
                        Select File&hellip; <input type="file" style="display: none;" multiple>
                    </span>
                </label>
-               <input type="text" class="form-control" readonly>
+               <span class="input-group-btn">
+                 <input type="text" class="form-control" readonly></br>
+               <input type="submit" value="Upload" class="btn btn-default">
+             </span>
            </div>
-           <input type="submit" value="Upload Image" class="btn btn-default">
       </form>
     </div>
     <div class="col-md-4 col-xs-4 col-sm-4 text-center">
