--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
         <div class="input-group">
                <label class="input-group-btn" style="display:inline;">
                    <span class="btn btn-primary">
-                       Select File&hellip; <input type="file" style="display: none;" multiple>
+                       Select File&hellip; <input type="file" name="image" style="display: none;" multiple>
                    </span>
                </label>
                <span class="input-group-btn">
